--- a/index.html
+++ b/index.html
@@ -1,170 +1,106 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="id">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ayoudya Portfolio</title>
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"/>
-    <link rel="stylesheet" href="./css/tailwind-build.css" />
-    <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portofolio Ayoudya</title>
+  <link rel="stylesheet" href="index.css">
+  <script src="script.js" defer></script>
 </head>
-<body class="tw-flex tw-min-h-[100vh] tw-w-full tw-flex-col tw-bg-[#ffffff]">
+<body class="tw-font-sans tw-bg-gray-100 tw-text-gray-800">
 
-    <!-- Header -->
-    <header class="tw-fixed tw-top-0 tw-z-20 tw-flex tw-h-[60px] tw-w-full tw-px-[10%] max-lg:tw-mr-auto lg:tw-justify-around">
-        <div class="tw-flex tw-w-max tw-place-items-center tw-gap-3">
-            <div class="tw-h-[50px] tw-w-[50px] tw-p-[4px]">
-                <img src="./assets/logo.png" alt="logo" class="tw-object tw-h-full tw-w-full"/>
-            </div>
-        </div>
-        <div class="collapsible-header animated-collapse" id="collapsed-items">
-            <div class="tw-flex tw-h-full tw-w-max tw-gap-5 tw-text-base tw-text-white lg:tw-mx-auto lg:tw-place-items-center">
-                <a class="header-links" href="#about">About Me</a>
-                <a class="header-links" href="#projects">Projects</a>
-                <a class="header-links" href="#experiences">Experiences</a>
-                <a class="header-links" href="#awards">Awards</a>
-                <a class="header-links" href="#skills">Skills</a>
-            </div>
-            <div class="tw-flex tw-place-items-center tw-gap-[20px] tw-text-xl">
-                <a href="https://wa.me/your-number" target="_blank" class="header-links"><i class="bi bi-whatsapp"></i></a>
-                <a href="mailto:youremail@example.com" class="header-links"><i class="bi bi-envelope"></i></a>
-                <a href="https://www.linkedin.com/in/yourprofile/" target="_blank" class="header-links"><i class="bi bi-linkedin"></i></a>
-            </div>
-        </div>
-        <button class="bi bi-list tw-absolute tw-right-3 tw-top-3 tw-z-50 tw-text-3xl lg:tw-hidden" onclick="toggleHeader()"></button>
-    </header>
+  <!-- HEADER -->
+  <header class="tw-fixed tw-w-full tw-backdrop-blur tw-bg-white/30 tw-shadow-sm tw-z-50 tw-py-4">
+    <div class="tw-container tw-mx-auto tw-flex tw-justify-between tw-items-center">
+      <div class="tw-text-xl tw-font-bold">AYOUDYA</div>
+      <nav>
+        <ul class="tw-flex tw-gap-6">
+          <li><a href="#about" class="tw-hover:text-blue-600 tw-transition">About Me</a></li>
+          <li><a href="#projects" class="tw-hover:text-blue-600 tw-transition">Projects</a></li>
+          <li><a href="#experience" class="tw-hover:text-blue-600 tw-transition">Experience</a></li>
+          <li><a href="#skills" class="tw-hover:text-blue-600 tw-transition">Skills</a></li>
+          <li><a href="#awards" class="tw-hover:text-blue-600 tw-transition">Awards</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <!-- About Me Section -->
-    <section id="about" class="tw-flex tw-min-h-[80vh] tw-w-full tw-flex-col tw-place-items-center tw-gap-5 tw-p-[5%] tw-bg-[#f5f5f5] tw-mt-[60px]">
-        <h1 class="tw-text-5xl tw-font-bold">About Me</h1>
-        <p class="tw-max-w-[800px] tw-text-center">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.
-        </p>
+  <main class="tw-pt-24 tw-container tw-mx-auto tw-px-4">
+
+    <!-- ABOUT ME -->
+    <section id="about" class="tw-mb-16">
+      <h2 class="tw-text-3xl tw-font-bold tw-mb-4">About Me</h2>
+      <p class="tw-text-lg">Halo! Saya Ayoudya Widyasmara, seorang Data Analyst dan Administration yang menyukai pengolahan data, optimasi sistem, dan pengembangan efisiensi kerja.</p>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="tw-flex tw-flex-col tw-place-items-center tw-gap-10 tw-p-[5%]">
-        <h2 class="tw-text-4xl tw-font-semibold">Projects</h2>
-        <div class="tw-flex tw-flex-wrap tw-gap-6 tw-justify-center">
-            <!-- Dummy project box -->
-            <a href="#" class="tw-flex tw-flex-col tw-w-[300px] tw-h-[300px] tw-bg-white tw-shadow-lg tw-rounded-lg tw-overflow-hidden tw-cursor-pointer">
-                <img src="./assets/images/homepage/property.jpg" alt="" class="tw-h-[200px] tw-w-full tw-object-cover"/>
-                <div class="tw-p-3 tw-text-center">
-                    <h3 class="tw-font-semibold">Project 1</h3>
-                    <p class="tw-text-gray-600 tw-text-sm">Short description of project 1.</p>
-                </div>
-            </a>
-            <a href="#" class="tw-flex tw-flex-col tw-w-[300px] tw-h-[300px] tw-bg-white tw-shadow-lg tw-rounded-lg tw-overflow-hidden tw-cursor-pointer">
-                <img src="./assets/images/homepage/apartment.jpg" alt="" class="tw-h-[200px] tw-w-full tw-object-cover"/>
-                <div class="tw-p-3 tw-text-center">
-                    <h3 class="tw-font-semibold">Project 2</h3>
-                    <p class="tw-text-gray-600 tw-text-sm">Short description of project 2.</p>
-                </div>
-            </a>
-            <a href="#" class="tw-flex tw-flex-col tw-w-[300px] tw-h-[300px] tw-bg-white tw-shadow-lg tw-rounded-lg tw-overflow-hidden tw-cursor-pointer">
-                <img src="./assets/images/homepage/house.jpg" alt="" class="tw-h-[200px] tw-w-full tw-object-cover"/>
-                <div class="tw-p-3 tw-text-center">
-                    <h3 class="tw-font-semibold">Project 3</h3>
-                    <p class="tw-text-gray-600 tw-text-sm">Short description of project 3.</p>
-                </div>
-            </a>
+    <!-- PROJECTS -->
+    <section id="projects" class="tw-mb-16">
+      <h2 class="tw-text-3xl tw-font-bold tw-mb-8">Projects</h2>
+      <div class="tw-grid tw-grid-cols-1 sm:tw-grid-cols-2 lg:tw-grid-cols-3 tw-gap-6">
+        <div class="tw-bg-white tw-rounded-2xl tw-shadow-md tw-p-4 tw-transition hover:tw-shadow-xl">
+          <h3 class="tw-font-semibold tw-mb-2">Project 1</h3>
+          <p>Deskripsi singkat project 1. Bisa berupa analisis data atau aplikasi sederhana.</p>
+          <a href="#" class="tw-inline-block tw-mt-2 tw-bg-blue-500 tw-text-white tw-px-4 tw-py-2 tw-rounded tw-transition hover:tw-bg-blue-600">Lihat Proyek</a>
         </div>
-    </section>
-
-    <!-- Experiences Section -->
-    <section id="experiences" class="tw-flex tw-flex-col tw-place-items-center tw-gap-10 tw-p-[5%] tw-bg-[#f5f5f5]">
-        <h2 class="tw-text-4xl tw-font-semibold">Experiences</h2>
-        <div class="tw-flex tw-flex-wrap tw-gap-6 tw-justify-center">
-            <div class="tw-w-[300px] tw-bg-white tw-shadow-lg tw-rounded-lg tw-p-4">
-                <h3 class="tw-font-semibold">Experience 1</h3>
-                <p class="tw-text-gray-600 tw-text-sm">Description of experience 1. <a href="#">Read more</a></p>
-            </div>
-            <div class="tw-w-[300px] tw-bg-white tw-shadow-lg tw-rounded-lg tw-p-4">
-                <h3 class="tw-font-semibold">Experience 2</h3>
-                <p class="tw-text-gray-600 tw-text-sm">Description of experience 2. <a href="#">Read more</a></p>
-            </div>
-            <div class="tw-w-[300px] tw-bg-white tw-shadow-lg tw-rounded-lg tw-p-4">
-                <h3 class="tw-font-semibold">Experience 3</h3>
-                <p class="tw-text-gray-600 tw-text-sm">Description of experience 3. <a href="#">Read more</a></p>
-            </div>
+        <div class="tw-bg-white tw-rounded-2xl tw-shadow-md tw-p-4 tw-transition hover:tw-shadow-xl">
+          <h3 class="tw-font-semibold tw-mb-2">Project 2</h3>
+          <p>Deskripsi singkat project 2. Bisa berupa laporan analisis atau dashboard.</p>
+          <a href="#" class="tw-inline-block tw-mt-2 tw-bg-blue-500 tw-text-white tw-px-4 tw-py-2 tw-rounded tw-transition hover:tw-bg-blue-600">Lihat Proyek</a>
         </div>
-    </section>
-
-    <!-- Awards Section -->
-    <section id="awards" class="tw-flex tw-flex-col tw-place-items-center tw-gap-10 tw-p-[5%]">
-        <h2 class="tw-text-4xl tw-font-semibold">Awards</h2>
-        <div class="tw-flex tw-flex-wrap tw-gap-6 tw-justify-center">
-            <div class="tw-w-[350px] tw-bg-white tw-shadow-lg tw-rounded-lg tw-p-4">
-                <img src="./assets/images/homepage/top-view.jpg" class="tw-w-full tw-h-[200px] tw-object-cover" />
-                <h3 class="tw-font-semibold tw-mt-2">Award 1</h3>
-                <p class="tw-text-gray-600 tw-text-sm">This certificate was awarded for outstanding achievement.</p>
-            </div>
-            <div class="tw-w-[350px] tw-bg-white tw-shadow-lg tw-rounded-lg tw-p-4">
-                <img src="./assets/images/homepage/hero-image.jpg" class="tw-w-full tw-h-[200px] tw-object-cover" />
-                <h3 class="tw-font-semibold tw-mt-2">Award 2</h3>
-                <p class="tw-text-gray-600 tw-text-sm">This certificate recognizes excellence in a specific skill.</p>
-            </div>
+        <div class="tw-bg-white tw-rounded-2xl tw-shadow-md tw-p-4 tw-transition hover:tw-shadow-xl">
+          <h3 class="tw-font-semibold tw-mb-2">Project 3</h3>
+          <p>Deskripsi singkat project 3. Bisa berupa automasi atau visualisasi data.</p>
+          <a href="#" class="tw-inline-block tw-mt-2 tw-bg-blue-500 tw-text-white tw-px-4 tw-py-2 tw-rounded tw-transition hover:tw-bg-blue-600">Lihat Proyek</a>
         </div>
+      </div>
     </section>
 
-    <!-- Colleagues Section -->
-    <section id="colleagues" class="tw-flex tw-flex-col tw-place-items-center tw-gap-10 tw-p-[5%] tw-bg-[#f5f5f5]">
-        <h2 class="tw-text-4xl tw-font-semibold">What my colleagues say</h2>
-        <p class="tw-text-center tw-max-w-[600px]">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus."</p>
-    </section>
-
-    <!-- Skills Section -->
-    <section id="skills" class="tw-flex tw-flex-col tw-place-items-center tw-gap-10 tw-p-[5%]">
-        <h2 class="tw-text-4xl tw-font-semibold">Skills</h2>
-        <div class="tw-flex tw-flex-col tw-gap-6 tw-w-full tw-max-w-[800px]">
-            <div>
-                <h3 class="tw-font-semibold">Soft Skills</h3>
-                <ul class="tw-list-disc tw-pl-5">
-                    <li>Communication</li>
-                    <li>Teamwork</li>
-                    <li>Problem Solving</li>
-                </ul>
-            </div>
-            <div>
-                <h3 class="tw-font-semibold">Hard Skills</h3>
-                <ul class="tw-list-disc tw-pl-5">
-                    <li>Data Analysis</li>
-                    <li>Project Management</li>
-                    <li>Administration</li>
-                </ul>
-            </div>
-            <div>
-                <h3 class="tw-font-semibold">Software Skills</h3>
-                <div class="tw-grid tw-grid-cols-3 tw-gap-4 tw-mt-2">
-                    <div class="tw-flex tw-flex-col tw-place-items-center">
-                        <img src="./assets/logo.png" class="tw-w-12 tw-h-12"/>
-                        <span>Excel</span>
-                    </div>
-                    <div class="tw-flex tw-flex-col tw-place-items-center">
-                        <img src="./assets/logo.png" class="tw-w-12 tw-h-12"/>
-                        <span>Power BI</span>
-                    </div>
-                    <div class="tw-flex tw-flex-col tw-place-items-center">
-                        <img src="./assets/logo.png" class="tw-w-12 tw-h-12"/>
-                        <span>SQL</span>
-                    </div>
-                </div>
-            </div>
+    <!-- EXPERIENCE -->
+    <section id="experience" class="tw-mb-16">
+      <h2 class="tw-text-3xl tw-font-bold tw-mb-8">Experience</h2>
+      <div class="tw-grid tw-grid-cols-1 sm:tw-grid-cols-2 lg:tw-grid-cols-3 tw-gap-6">
+        <div class="tw-bg-white tw-rounded-2xl tw-shadow-md tw-p-4">
+          <h3 class="tw-font-semibold tw-mb-2">Admin Intern</h3>
+          <p>Pengalaman mengelola administrasi dan data perusahaan.</p>
         </div>
+        <div class="tw-bg-white tw-rounded-2xl tw-shadow-md tw-p-4">
+          <h3 class="tw-font-semibold tw-mb-2">Data Analyst Intern</h3>
+          <p>Analisis data menggunakan Excel dan Python untuk laporan bulanan.</p>
+        </div>
+        <div class="tw-bg-white tw-rounded-2xl tw-shadow-md tw-p-4">
+          <h3 class="tw-font-semibold tw-mb-2">Project Coordinator</h3>
+          <p>Koordinasi tim dan pengelolaan proyek kecil di kampus.</p>
+        </div>
+      </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="tw-flex tw-w-full tw-place-content-center tw-gap-6 tw-bg-[#000] tw-p-[5%] tw-text-white">
-        <a href="https://wa.me/your-number" target="_blank" class="tw-text-2xl"><i class="bi bi-whatsapp"></i></a>
-        <a href="mailto:youremail@example.com" class="tw-text-2xl"><i class="bi bi-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/yourprofile/" target="_blank" class="tw-text-2xl"><i class="bi bi-linkedin"></i></a>
-    </footer>
+    <!-- SKILLS -->
+    <section id="skills" class="tw-mb-16">
+      <h2 class="tw-text-3xl tw-font-bold tw-mb-8">Skills</h2>
+      <ul class="tw-flex tw-flex-wrap tw-gap-4">
+        <li class="tw-bg-blue-100 tw-px-4 tw-py-2 tw-rounded-full">Excel</li>
+        <li class="tw-bg-blue-100 tw-px-4 tw-py-2 tw-rounded-full">Python</li>
+        <li class="tw-bg-blue-100 tw-px-4 tw-py-2 tw-rounded-full">Power BI</li>
+        <li class="tw-bg-blue-100 tw-px-4 tw-py-2 tw-rounded-full">Google Sheets</li>
+        <li class="tw-bg-blue-100 tw-px-4 tw-py-2 tw-rounded-full">Data Visualization</li>
+      </ul>
+    </section>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script src="./scripts/utils.js"></script>
-    <script src="index.js"></script>
+    <!-- AWARDS -->
+    <section id="awards" class="tw-mb-16">
+      <h2 class="tw-text-3xl tw-font-bold tw-mb-8">Awards</h2>
+      <ul class="tw-list-disc tw-pl-6">
+        <li>Best Data Analysis Project 2024</li>
+        <li>Certificate of Participation – SEA Teacher</li>
+      </ul>
+    </section>
+
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="tw-bg-gray-200 tw-text-gray-700 tw-py-6 tw-text-center">
+    &copy; 2025 Ayoudya Widyasmara | <a href="#" class="tw-text-blue-600 tw-hover:underline">LinkedIn</a> | <a href="#" class="tw-text-blue-600 tw-hover:underline">WhatsApp</a>
+  </footer>
+
 </body>
 </html>
